--- a/css/swag.css
+++ b/css/swag.css
@@ -7,9 +7,14 @@
 .center .navbar-inner {
     text-align:center;
 }
+
 .navbar-custom {
     background-color:#229922;
     color:#229922;
     border-radius:0;
 }
 .navbar-custom .navbar-nav > li > a:hover, .nav > li > a:focus { text-decoration: none; background-color: #229922; }
+#map{
+    height: 400px;
+   margin-top: 120px;
+}
